[gd_scene load_steps=9 format=3 uid="uid://bixlsgteo83ue"]

[ext_resource type="Script" uid="uid://6sgo4uajixwa" path="res://Inventory/Weapons/Scripts/bow_weapon.gd" id="1_6wkh3"]
[ext_resource type="Texture2D" uid="uid://bh8eodclq3npv" path="res://Inventory/Weapons/weapons/bow.png" id="2_sk63n"]
[ext_resource type="Texture2D" uid="uid://d1vb5gy62xh1a" path="res://Inventory/Weapons/weapons/arrows.png" id="3_fg82p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4jf8m"]
atlas = ExtResource("3_fg82p")
region = Rect2(0, 0, 768, 1024)

[sub_resource type="Animation" id="Animation_4jf8m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArrowSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7, 4)]
}

[sub_resource type="Animation" id="Animation_pdg1r"]
resource_name = "idle"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_6rynp"]
resource_name = "shoot"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 20, 16, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArrowSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(7, 4), Vector2(6, 4), Vector2(4, 4), Vector2(2, 4), Vector2(0, 4), Vector2(-3, 4), Vector2(-6, 4), Vector2(-7, 4), Vector2(-10, 4), Vector2(-12, 4), Vector2(-13, 4), Vector2(-15, 4), Vector2(-10, 4), Vector2(7, 4), Vector2(10, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0dbyo"]
_data = {
&"RESET": SubResource("Animation_4jf8m"),
&"idle": SubResource("Animation_pdg1r"),
&"shoot": SubResource("Animation_6rynp")
}

[node name="BowWeapon" type="Node2D"]
script = ExtResource("1_6wkh3")
knockback_force = 100.0
weapon_name = "Bow"
damage = 2
ep_cost = 1.0

[node name="BowSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_sk63n")
hframes = 6
vframes = 4
frame = 12

[node name="ArrowSprite" type="Sprite2D" parent="."]
position = Vector2(7, 4)
scale = Vector2(0.08, 0.08)
texture = SubResource("AtlasTexture_4jf8m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0dbyo")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
